# Samsung-vulkan

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak2  vulkan_minimal_compute
jni/: Android.mk  Application.mk  CMakeLists.txt  main.cpp  main.hpp
scripts/: adb_pull.sh  adb_push.sh  adb_validation.sh  add_push.sh  alpha_push.sh  crop_push.sh  cvtcolour_push.sh  downsize_nni.sh  emboss_push.sh  gaussian_push.sh  grey_push.sh  lanczos_push.sh  median_push.sh  multiply_push.sh  nearest_push.sh  noop_push.sh  pixelate_push.sh  reshape_push.sh  rgb_ycrcb_push.sh  sobel_push.sh  solarize_push.sh  ycrcb_bgr.sh
shaders/: add.comp  add.comp.spv  alphaBlending.comp  compute.spv  crop.comp  cvtcolour.comp  downsize_bicubic.comp  downsize_nni.comp  emboss.comp  gammaCorrection.comp  gaussian.comp  gaussian.comp.spv  grey.comp  lanczos.comp  lanczos.comp.spv  medianFilter.comp  multiply.comp  nearestneighbour.comp  noop.comp  pixelate.comp  reshape.comp  rgb_ycrcb.comp  shader.comp  sobelEdge.comp  solarize.comp  ycrcb_bgr.comp
src/: CMakeLists.txt  main.cpp  main.cpp.bak  vulkan_compute
